jupyterhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
   # nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: datahub
  namespace: jupyterhub
spec:
  ingressClassName: nginx
  rules:
    - host: datahub.ruc.edu.cn
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:  
                name: nginx-svc
                port: 
                  number: 443
  tls:
    - hosts:
        - datahub.ruc.edu.cn
      secretName: datahub-tls
